Thu Apr 24 18:32:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework_T.cpp:

          Cleaned up extra reference to writer.

Thu Apr 24 18:10:55 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * performance-tests/Bench/src/Process.cpp:
        * performance-tests/DCPS/Priority/Publisher.cpp:
        * performance-tests/DCPS/Priority/Subscriber.cpp:
        * tests/DCPS/Dispose/main.cpp:
        * tests/DCPS/Federation/Publisher.cpp:
        * tests/DCPS/Federation/Subscriber.cpp:
        * tests/DCPS/MultiRepoTest/TestMonitor.cpp:
        * tests/DCPS/MultiRepoTest/TestSystem.cpp:
        * tests/DCPS/Presentation/main.cpp:
        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/Subscriber.cpp:
        * tests/DCPS/SubscriberCycle/ParticipantTask.cpp:
        * tests/DCPS/TestFramework/TestFramework.cpp:
        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/TimeBasedFilter/main.cpp:
        * tests/DCPS/WaitForAck/Publisher.cpp:
        * tests/DCPS/WaitForAck/Subscriber.cpp:

          Storing TheParticipantFactory pointer in var to make sure
          memory is cleaned up.

Thu Apr 24 17:27:59 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework.cpp:

          Reverted change since participant is already cleaned up
          (still need to identify why valgrind indicates it is lost).

Thu Apr 24 17:20:41 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework.cpp:

          Cleaned up participant.

        * tests/DCPS/unit/Main.cpp:

          Ensured DataSampleListElements were deleted.

Thu Apr 24 14:30:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/WaitForAck/Publisher.cpp:

          Added storing retrieved entity in a var so the reference added