@@ -134,6 +134,7 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
     qos.liveliness.kind = DDS::AUTOMATIC_LIVELINESS_QOS;
     qos.liveliness.lease_duration.sec = 10;
     qos.liveliness.lease_duration.nanosec = 0;
+    qos.history.kind = DDS::KEEP_ALL_HISTORY_QOS;
 
     bool reliable = true;
     parse_args(argc, argv, reliable);
